--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-POSTGRES_URI=postgre uri
+PORT=5000
+MONGO_URI=mongodb://localhost:27017/test_database
+POSGRES_URI=postgres://postgres@localhost/postgres
